# compressy

./: .gitignore  README.md  pyproject.toml
compressy/: __init__.py  compressor.py
compressy.egg-info/: SOURCES.txt  top_level.txt
tests/: test_compressor.py
